# --
# CHANGES - change log  of OTRS
# Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.230 2006-01-29 23:51:00 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS head
 - (2006/01/07) added SendNoNotification option for MoveTicket(),
    LockSet() and OwnerSet() in Kernel/System/Ticket.pm (used in
    GenericAgent to do some admin stuff).
 - (2005/12/29) added online repository access for bin/opm.pl
 - (2005/12/29) added Delete and Spam config option to
    Kernel/Config/Files/Ticket.xml for Ticket::Frontend::MenuModule
 - (2005/12/21) added column type check in xml database defination
 - (2005/12/20) added unit test system
 - (2005/12/17) improved admin view of session management
 - (2005/12/04) moved FAQ from framework to own application module
    (can be installed over opm online repository now)
 - (2005/11/27) moved otrs archive directory for download and in RPMs
    from otrs to otrs-x.x.x
 - (2005/11/20) added multi pre application module support, just
    define it like:
    $Self->{PreApplicationModule}->{AgentInfo} = 'Kernel::Modules::AgentInfo';

2.0.5 (2006/??/??)
 - (2006/01/29) fixed/removed wrong config option
    "Ticket::Frontend::QueueSortDefault", added own config option for
    StatusView of tickets
 - (2006/01/29) fixed bug #1047 forward fails if " is in From
 - (2006/01/29) fixed ldap authentication if application charset is
    e. g. iso-8859-1 and not utf-8
 - (2006/01/26) fixed some spelling mistakes in
    Kernel/Config/Files/Ticket.xml and Kernel/Config/Files/Framework.xml
 - (2006/01/24) Added X-Spam-Level to config files to have the possibility
     to filter for this header with PostMasterFilter
 - (2006/01/23) fixed bug #1069 - Problem when the name of a GenericAgent
    job was updated