@@ -2,7 +2,7 @@
 # CHANGES - change log  of OTRS
 # Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.230 2006-01-29 23:51:00 martin Exp $
+# $Id: CHANGES,v 1.231 2006-02-01 17:02:34 cs Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -27,6 +27,8 @@ CVS head
     $Self->{PreApplicationModule}->{AgentInfo} = 'Kernel::Modules::AgentInfo';
 
 2.0.5 (2006/??/??)
+ - (2006/02/01) changed Kernel/System/Spelling.pm to work with (a|i)spell
+    on Windows systems
  - (2006/01/29) fixed/removed wrong config option
     "Ticket::Frontend::QueueSortDefault", added own config option for
     StatusView of tickets
